--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -1,1 +1,59 @@
+nav {
+  padding-left: 60px;
+  padding-right: 60px;
+  background-color: gray;
+  width: 100%;
+  text-align: left;
+  position: fixed;
+  height: 60px;
+}
 
+ul li {
+  display: inline-block;
+  position: relative;
+  left: 120px;
+}
+
+.logo {
+  position: absolute;
+  left: 80px;
+  top: 5px;
+  height: 45px;
+  border-radius: 50%;
+  border: 1px solid black;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*nav {
+  background-color: gray;
+  height: 60px;
+  position: relative;
+  text-align: right;
+}
+
+nav img {
+  padding-left: 10px;
+}
+
+nav ul {
+  text-align: right;
+}*/
+
+
+
+.green-box {
+  width: 600px;
+  height: 300px;
+  border: 10px dotted green;
+}
