One hour - no idea how to set background picture.

--- a/styles/position-page.css
+++ b/styles/position-page.css
@@ -23,6 +23,11 @@ ul li {
   border: 1px solid black;
 }
 
+.space-image {
+  background: no-repeat center center fixed;
+  background-size: cover;
+}
+
 .green-box {
   width: 600px;
   height: 300px;
